# SAS

./: .gitignore  BUILD_INSTRUCTIONS.md  CLEANUP_SUMMARY.md  CODE_MAPPING_VERIFICATION.md  COMPREHENSIVE_VERIFICATION.md  CONVERSION_VERIFICATION.md  Cargo.toml  DECOMPILATION_COMPLETE.md  FINAL_STATUS.md  FINAL_VERIFICATION_SUMMARY.md  README.md  RUST_IMPLEMENTATION.md  SECURITY_SUMMARY.md  TASK_COMPLETE.md  VERIFICATION_COMPLETE.md  VERIFICATION_GUIDE.md  bloxrewards.txt  config.json  dorks.txt  http.txt
Src/: README.md
Src/analysis/: analysis_summary.txt  strings.txt
Src/assembly/: entry_point.asm  main_function.asm
Src/documentation/: USAGE_GUIDE.md  decompilation_report.md
Src/metadata/: binary_info.txt
decompiled/: DECOMPILATION_METHODOLOGY.md  README.md  functions_list.txt  imports.txt
output/urls/2024-06-02_18-50-50/: all.txt  filtered.txt
output/urls/2024-06-02_18-56-11/: all.txt  filtered.txt
output/urls/2024-06-02_21-18-20/: all.txt  filtered.txt
output/urls/2024-06-02_21-36-36/: all.txt  filtered.txt
output/urls/2024-06-02_21-39-37/: all.txt  filtered.txt
output/urls/2024-06-03_04-49-27/: all.txt  filtered.txt
output/urls/2025-05-16_07-29-42/: all.txt  filtered.txt
output/vulns/2025-07-19_10-18-15/: wafs.txt
src/: config.rs  main.rs
src/modules/: dork_checker.rs  dork_generator.rs  keyword_generator.rs  mod.rs  parser.rs  vuln_scanner.rs
