[package]
name = "swiss-army-suite"
version = "1.0.0"
edition = "2021"
authors = ["SwissArmySuite Team"]
description = "Swiss Army Suite - Security and Web Research Toolkit"

[[bin]]
name = "swiss-army-suite"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
url = "2.5"
regex = "1.10"
scraper = "0.18"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
